--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Miliy">
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity">
+
+
+        </activity>
 
         <activity android:name=".LoginActivity">
             <intent-filter>
